removed express js for vercel deployment

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <title>Collaborative Whiteboard</title>
 </head>
 <body>
+    <h3>This get erased after 5 minutes of inactivity</h3>
     <div class="toolbar">
         <input type="color" id="color-picker">
         <input type="range" id="pen-size-slider" min="1" max="100" value="3">
