--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,12 @@
     <style>
         body{
             overflow: hidden;
+            background-color: #FF8DA1;
+        }
+        #canvas{
+            width: 720px;
+            height: 1500px;
+            margin-top: 50px;
         }
     </style>
 </head>
