--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,11 @@
             background-color: #FF8DA1;
         }
         #canvas{
-            width: 720px;
-            height: 1500px;
+            width: calc(100% - 10px);
+            height: calc (100% - 70px);
             margin-top: 50px;
+            touch-action: none;
+            background-color: white;
         }
     </style>
 </head>
