--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>Collaborative Whiteboard</title>
     <style>
-        body{
-            overflow: hidden;
-            background-color: #FF8DA1;
+        body {
+            margin: 0;
+            padding: 0;
+            background: #FF8DA1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: flex-start;
+            height: 100vh;
         }
-        #canvas{
-            width: calc(100% - 10px);
-            height: calc (100% - 70px);
-            margin-top: 50px;
+        #canvas {
+            width: 100%;
+            max-width: 720px; 
+            aspect-ratio: 720 / 1500;
+        
+            background: white;
+            border-radius: 8px;
+        
             touch-action: none;
-            background-color: white;
+            display: block;
+            margin-top: 15px;
         }
     </style>
 </head>
