--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,16 @@
             height: 100vh;
         }
         #canvas {
-            width: 100%;
-            max-width: 720px; 
-            aspect-ratio: 720 / 1500;
+            width: 95vw;
+            max-width: 400px; 
+            aspect-ratio: 1 / 2;
         
             background: white;
             border-radius: 8px;
         
             touch-action: none;
             display: block;
-            margin-top: 15px;
+            margin-top: 10px;
         }
     </style>
 </head>
