Phone se coding🤪

--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
         .toolbar {
             position: relative;
             z-index: 10;   /* bring toolbar above canvas */
-            bottom: 10px;
+            top: 10px;
             left: 50%;
             transform: translateX(-50%);
             display: flex;
